--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,161 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html {background-color: black;}
+
+.navbar{
+  background-color: white;
+  border: 2px solid white;
+  height: 15vh;
+  margin-top: 10vh;
+  opacity: 0.7;
+}
+
+span{
+  font-family: 'Silkscreen', cursive;
+}
+
+
+.name-role-container span{
+  display: inline-block;
+  width: 57vw;
+  margin-top: 10px;
+}
+
+
+.tab-option{
+  border-top: 5px solid grey;
+  width: 10vw;
+  display: inline-block;
+  transition: 0.4s ease-in-out;
+  text-align: center;
+  margin: 10px;
+}
+.tab-option:hover{
+  border-top: 5px solid black;
+  cursor: pointer;
+}
+
+#logo{
+  height:auto;
+  width: 8vw;
+}
+
+#side-bar{
+  /* width: 10vw; */
+  width: 5vw;
+  text-align: center;
+}
+
+#vertical-line{
+  margin-top: -14vh;
+  border-left: 2px solid white;
+  height:40vh;
+  margin-left: 3vw;
+  width: 10vw;
+}
+
+.middle-banner{
+  height: 60vh;
+}
+
+.social-icon{
+  height: auto;
+  width: 3vw;
+  margin-left: 1.5vw;
+  margin-top: 4vh;
+}
+
+.social-iconss{
+  height: auto;
+  width: 3vw;
+  margin-left: 1.5vw;
+  position: relative;
+  top: -3vh;
+}
+
+
+.social-icon:hover{
+  cursor: pointer;
+}
+
+.info{
+ color: white;
+ font-family: 'Silkscreen', cursive; 
+ width: 50vw;
+ display: inline-block;
+ margin-left: 15vw;
+ position: relative;
+ top: -32vh;
+}
+
+.about-page{
+  color: white;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
+.about-wrapper{
+  border-left: 1px solid white;
+}
+/*---------------------about-page-top---------------------------------------*/
+
+
+.about-text{
+  font-size: 4rem;
+  width:10vw;
+  height: 40vh;
+  margin-top: 10vh;
+  margin-left: 15vw;
+  font-family: 'Silkscreen', cursive; 
+}
+
+.profile-pic{
+  height:auto;
+  width: 25vw;
+  display: inline-block;
+  position: relative;
+  left: 40vw;
+  margin-top: -15vh;
+}
+
+.meet-me-text{
+  position: relative;
+  left:4vw;
+  top: -15vh;
+}
+
+
+.about-middle-info{
+  width: 50vw;
+  margin: 10vh;
+  margin-left: 15vw;
+  font-family: 'Silkscreen', cursive; 
+}
+
+.contact-block{
+  width:50vw;
+  margin: 10vh;
+  margin-left: 15vw;
+}
+.contact-block-heading{
+  padding-bottom: 10px;
+  border-bottom: 1px solid white;
+  font-family: 'Silkscreen', cursive; 
+  margin-bottom: 10px;
+}
+
+.contact-option{
+  margin-right:5vw;
+  transition: 1s ease-in-out;
+}
+
+.contact-option:hover{
+  cursor: pointer;
+  border-bottom: 0.5px solid white;
 }
